<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.android.quizapp.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"

                >



                <TextView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="IQ QUIZ APP"
                    android:textSize="40sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="67dp"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_height="50dp"
                    android:layout_toRightOf="@id/header"
                    app:srcCompat="@drawable/iq" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                android:id="@+id/question1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                    android:layout_marginBottom="8dp"
                android:text="@string/question_1" />

            <RadioGroup
                android:id="@+id/Q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question1">

                <RadioButton
                    android:id="@+id/A_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="100" />


                <RadioButton
                    android:id="@+id/B_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="132" />


                <RadioButton
                    android:id="@+id/C_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="145" />


                <RadioButton
                    android:id="@+id/D_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="144" />

            </RadioGroup>

            <!--answer = b-->
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                android:id="@+id/question2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                    android:layout_marginBottom="8dp"
                android:text="@string/question_2" />

            <RadioGroup
                android:id="@+id/Q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question2">

                <RadioButton
                    android:id="@+id/A_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Sunday" />


                <RadioButton
                    android:id="@+id/B_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Monday" />


                <RadioButton
                    android:id="@+id/C_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wednesday" />


                <RadioButton
                    android:id="@+id/D_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="none of the above" />

            </RadioGroup>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                android:id="@+id/question3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                    android:layout_marginBottom="8dp"
                android:text="@string/question_3" />

            <RadioGroup
                android:id="@+id/Q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question3">

                <RadioButton
                    android:id="@+id/A_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Voice" />


                <RadioButton
                    android:id="@+id/B_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="bald" />


                <RadioButton
                    android:id="@+id/C_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="bloat" />


                <RadioButton
                    android:id="@+id/D_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="castle" />


            </RadioGroup>


            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                android:id="@+id/question4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                    android:layout_marginBottom="8dp"
                android:text="@string/question_4" />


            <RadioGroup
                android:id="@+id/Q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question4">

                <RadioButton
                    android:id="@+id/A_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"

                    android:text="plant" />


                <RadioButton
                    android:id="@+id/B_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="leaf" />


                <RadioButton
                    android:id="@+id/C_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="branch" />


                <RadioButton
                    android:id="@+id/D_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="mangrove" />


            </RadioGroup>


            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                android:text="Full Name" />

            <EditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:layout_below="@+id/name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:id="@+id/showResult"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fullName"
                android:text="display my result below" />

            <CheckBox
                android:id="@+id/sendMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/showResult"
                android:layout_marginBottom="8dp"
                android:text="Send result to my email" />

                <TextView
                    android:id="@+id/result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sendMail"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="#263238"
                    android:padding="8dp"
                    android:text="@string/result"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:typeface="monospace" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_below="@id/result"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/submit"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/result"
                        android:onClick="submit"
                        android:text="submit"
                        android:textColor="#fff" />

                    <Button
                        android:id="@+id/reset"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/submit"
                        android:layout_below="@id/result"
                        android:layout_centerHorizontal="true"
                        android:onClick="reset"
                        android:text="reset"
                        android:textColor="#fff" />



                </LinearLayout>





            </RelativeLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>


</ScrollView>
